Javascript class'lar anlatıldı

--- a/HtmlCssJs/wwwroot/04_BasicJavascriptArrays.html
+++ b/HtmlCssJs/wwwroot/04_BasicJavascriptArrays.html
@@ -63,8 +63,8 @@
                 <input type="text" placeholder="Oyun adı giriniz..." />
             </td>
             <td class="td3">
-                <button onclick="oyunuEsitligeGoreAra()">Oyunu Eşitliğe Göre Ara</button>
-                <button onclick="oyunuIcermeyeGoreAra()">Oyunu İçermeye Göre Ara</button>
+                <input type="checkbox" id="esitmi"> Adı Eşit Olanlar
+                <button onclick="ara()">Ara</button>
             </td>
         </tr>
         <tr>
